fix: css overflow hidden all over the app

--- a/public/style.css
+++ b/public/style.css
@@ -4,4 +4,5 @@ root, * {
     box-sizing: border-box;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
